[package]
name = "bandaged_cube_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
lazy_static = "1.4.0"
typed-builder = "0.11.0"
rayon = "1.5"
